<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|center_vertical"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/operations"
        android:layout_width="400dp"
        android:layout_height="65dp"
        android:gravity="center_horizontal|center_vertical|end"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/zero"
        android:textColor="#090909"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="400dp"
        android:layout_height="65dp"
        android:layout_marginStart="176dp"
        android:layout_marginEnd="176dp"
        android:gravity="center_horizontal|center_vertical|end"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/zero"
        android:textColor="#040303"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operations" />


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="5"
        android:columnCount="4"
        >

        <Button
            android:id="@+id/btnAC"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/AC"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnDel"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/delete"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/division"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnMult"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/multiplication"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/seven"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/eight"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/nine"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/minus"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/four"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/five"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/six"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/plus"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/one"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/two"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/three"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_rowSpan="2"
            android:layout_rowWeight="2"
            android:layout_column="3"

            android:layout_columnWeight="1"
            android:background="#65C4EF"
            android:text="@string/equals"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/dot"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:textSize="30sp" />


    </GridLayout>

</LinearLayout>